# BI_test_task

./: README.md  main.py  pyproject.toml  requests.py
data/: ИсходныеДанныеИПримерыОтчетов.xlsx  ТестовоеЗаданиеBI.docx
result/: db_file.db  report.xlsx
