[tool.poetry]
name = "infovizion"
version = "0.1.0"
description = ""
authors = ["Gusak Vadim <gusakvd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
